Fix margin error on Books page to align items

--- a/src/components/AddBookForm/addBook.module.css
+++ b/src/components/AddBookForm/addBook.module.css
@@ -1,5 +1,5 @@
 .bookFormContainer {
-  width: 90%;
+  width: 85%;
   margin: 10px auto;
 }
 
